main: swagger ui 자동생성 기능 추가
